--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -93,7 +93,7 @@ body header {
 	background-image: url(../Images/Logo/kalendarzLogoTransparent.png);
 	position: absolute !important;
 	background-repeat: no-repeat;
-	top: -55px;
+	top: -56px;
 	height: 130px;
 	width: 540px;
 }
@@ -195,17 +195,12 @@ body header {
 }
 
 #loginPageContainer {
-	/*background: rgba(236, 255, 221, 1);*/
-	background: rgba(249, 255, 249, 1);
+	/*background: rgba(249, 255, 249, 1);*/
 	width: 440px;
-	padding-top: 30px;
-	/*border-radius: 20px;*/
 	top: 25px;
 	margin-left: 38%;
-	color: rgb(104,104,104);
-	/*border: 1px solid rgb(216, 255, 232);*/
+	color: rgb(132,132,132);
 	margin-top: 40px;
-	border: 1px solid rgb(247, 247, 247);
 	display: none;
 	position: absolute;
 	z-index: 4;
@@ -221,16 +216,11 @@ body header {
 	}
 
 #registerPageContainer {
-	background: rgba(249, 255, 249, 1);
 	display: block;
-	border-top: 1px solid #DADADA;
-	border-bottom: 1px solid white;
 	width: 500px;
 	margin-left: 34%;
 	top: 25px;
-	margin-top: 40px;
-	padding-top: 30px;
-	color: rgb(104,104,104);
+	color: rgb(132,132,132);
 	display: none;
 	position: absolute;
 	z-index: 4;
@@ -247,8 +237,12 @@ body header {
 
 	#registerPageContainer fieldset {
 		border: none;
-		background: rgba(0,0,0,.07);
 	}
+
+.register-birthdate-txtbox {
+	width: 50px !important;
+}
+
 
 #details-menu-header {
 	text-align: center;
@@ -271,7 +265,6 @@ body header {
 
 #loginPageContainer fieldset {
 	border: transparent;
-	background: rgba(0, 0,0,.07);
 }
 
 .weekday-container {
@@ -501,7 +494,7 @@ body header {
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
-.large-popup-header {
+.form-header {
 	width: 100%;
 	height: 30px;
 }
@@ -525,9 +518,7 @@ body header {
 	border-radius: 3px;
 }
 
-.add-event-body {
-	height: auto;
-	color: rgb(216, 216, 216);
+.form-body {
 	margin-top: 20px;
 }
 
@@ -978,8 +969,8 @@ wydarzenia-tab {
 
 .summary-validation-errors {
 	color: red;
+	margin-left:40px;
 }
-
 
 
 
@@ -1034,13 +1025,13 @@ wydarzenia-tab {
 }
 
 #loginFormBtn {
-	margin-top: 40px;
-	margin-left: 70px;
+	margin-top: 30px;
+	margin-left: 136px;
 }
 
 #registerFormBtn {
-	margin-top: 40px;
-	margin-left: 40px;
+	margin-top: 30px;
+	margin-left: 118px;
 }
 
 .loader-container {
@@ -1083,7 +1074,7 @@ wydarzenia-tab {
 		bottom: 12px;
 	}
 
-	.slick-contact-form input[type=text], textarea, select {
+	.slick-contact-form input[type=text], input[type=password], textarea, select {
 		/*font: 14px normal normal uppercase;*/
 		color: #7c7873;
 		background: none;
@@ -1113,9 +1104,9 @@ wydarzenia-tab {
 		width: 209px !important;
 	}
 
-.sllick-contact-form textarea:focus, input[type=text]:focus {
-	background: rgba(255,255,255,.35);
-}
+	.slick-contact-form textarea:focus, input[type=text]:focus, input[type=password]:focus {
+		background: rgba(255,255,255,.35);
+	}
 
 
 /*
@@ -1215,16 +1206,12 @@ Slider
 /* Styles for basic forms
 -----------------------------------------------------------*/
 fieldset {
-	margin: 0 0 .5em 0;
 	width: auto;
 }
 
 
 legend {
 	font-size: 1.2em;
-}
-
-textarea {
 }
 
 .editor-label {
@@ -1239,7 +1226,6 @@ textarea {
 -----------------------------------------------------------*/
 .field-validation-error {
 	color: #f00;
-	padding: 0 10px;
 }
 
 .field-validation-valid {
