--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -89,8 +89,6 @@
 
 				var indexViewModel = @Html.Raw(@Model);
 
-				console.log(indexViewModel.PrivateEvents);
-
 				var CvmConverter = new CalendarViewModelConverter();
 
 				calendarViewModel.eventPrivacyLevels = indexViewModel.PrivacyLevels;
@@ -110,52 +108,6 @@
 				$calendar.append('<div class="calendar-navigation-arrows-right"><img src="Images/Nav/arrow-Right.png" alt="arrow-Right"/></div>');
 				$details.append('<div class="details-navigation-arrows-left"><img src="Images/Nav/arrow-Left.png" alt="arrow-Left"/></div>');
 				$lobby.append('<div class="lobby-navigation-arrows-right"><img src="Images/Nav/arrow-Right.png" alt="arrow-Right"/></div>');
-
-				(function overrideAspMvcDateValidation() {
-
-					$.validator.addMethod(
-						"date",
-						function (value, element) {
-
-							//Return            NB: isRequired is not checked at this stage
-							return (value == "") ? true : isDate(value);
-						},
-						"* invalid"
-					);
-
-					//Validates a date input -- http://jquerybyexample.blogspot.com/2011/12/validate-date-    using-jquery.html
-					function isDate(txtDate) {
-						var currVal = txtDate;
-						if (currVal == '')
-							return false;
-
-						//Declare Regex  
-						var rxDatePattern = /^(\d{1,2})(\/|-)(\d{1,2})(\/|-)(\d{4})$/;
-						var dtArray = currVal.match(rxDatePattern); // is format OK?
-
-						if (dtArray == null)
-							return false;
-
-						//Checks for dd/mm/yyyy format.
-						var dtDay = dtArray[1];
-						var dtMonth = dtArray[3];
-						var dtYear = dtArray[5];
-
-						if (dtMonth < 1 || dtMonth > 12)
-							return false;
-						else if (dtDay < 1 || dtDay > 31)
-							return false;
-						else if ((dtMonth == 4 || dtMonth == 6 || dtMonth == 9 || dtMonth == 11) && dtDay == 31)
-							return false;
-						else if (dtMonth == 2) {
-							var isleap = (dtYear % 4 == 0 && (dtYear % 100 != 0 || dtYear % 400 == 0));
-							if (dtDay > 29 || (dtDay == 29 && !isleap))
-								return false;
-						}
-
-						return true;
-					}
-				}());
 
 				this.Initialize.InitializeHover = function () {
 
@@ -190,6 +142,16 @@
 							$container.hide();
 						}
 					}, '.event-rectangle');
+
+					$(".hover-cursor-picker").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+					});
 
 					$mainContainer.on({
 						mouseenter: function () {
@@ -468,7 +430,12 @@
 				}();
 
 				this.Initialize.InitializeClick = function () {
-
+					var $txtbox = $("#registerPageContainer .register-birthdate-txtbox");
+					$txtbox.keyup(function(){
+					
+						$("#registerPageContainer #birthDateValidationErrorMsg").hide();
+						$txtbox.removeClass("input-validation-error");			
+					});
 
 					//$(".szkolenia-btn").click(function () {
 					//	$(".selected-content-container").slideUp("slow");
