--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,7 +1,17 @@
-﻿<div id="details-menu-header">
-	
+﻿<div id="detailsMenuHeader" class="dark-background-div">
 </div>
-<section class="calendar-day-details-container">
+<section id="detailsPanel">
+<div id="todayDateAndTimeContainer">
+<div id="todayDateDay">19</div>
+<div style="display:inline-block;">
+<div id="todayDateMonth">Sierpień</div><div id="todayDateYear">2014</div>
+</div>
+<div id="todayDateDayName">Wtorek</div>
+
+</div>
+</section>
+<div id="lowDetailsMenuHeader" class="dark-background-div"></div>
+<section id="calendarDayDetailsContainer">
 	<div id="calendarDayDetailsTable">
 		<div class="table-details-head">
 			<div>7:00</div>
