implemented first stage of eventTree object

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -86,7 +86,7 @@
 				<div class="middle-event-details">
 
 					<div class="event-title-container">
-						<a data-bind="text: title" class="events-text-name" href="#"></a>
+						<a data-bind="text: name" class="events-text-name" href="#"></a>
 					</div>
 
 					<div class="events-text-container">
