--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -30,7 +30,7 @@
 							</div>
 							<div>
 								@Html.LabelFor(m => m.Event.Title, new { @class = "form-label" })
-								@Html.TextBoxFor(m => m.Event.Title, new { maxlength = 30, data_bind = "value: title" })
+								@Html.TextBoxFor(m => m.Event.Title, new { maxlength = 30, data_bind = "value: name" })
 							</div>
 						</div>
 
