--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -6,12 +6,22 @@
 body {
 	font-size: .85em;
 	line-height: 1.6;
-	font-family: 'Oxygen',"Segoe UI", Verdana, Helvetica, Sans-Serif;
+	font-family: 'Oxygen', "SegoeUI", Helvetica, Sans-Serif;
 	padding: 0px;
 	margin: 0px;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 }
+
+/*body {
+	font-size: .85em;
+	line-height: 1.6;
+	font-family: "SegoeUI", 'Oxygen', Helvetica, Sans-Serif;
+	padding: 0px;
+	margin: 0px;
+	font-weight: 400;
+	-webkit-font-smoothing: antialiased;
+}*/
 
 header, footer, nav, section, div {
 	display: block;
@@ -22,6 +32,17 @@ header, footer, nav, section, div {
 	text-decoration: underline;
 }
 
+@font-face {
+	font-family: Oxygen;
+	src: url('Fonts/Oxygen/Oxygen-Regular.ttf');
+}
+
+@font-face {
+	font-family: SegoeUI;
+	src: url('Fonts/SegoeUI/segoeui.ttf');
+}
+
+
 /* Kalendarz Kariery
 -----------------------------------------------------------*/
 
@@ -30,7 +51,7 @@ header, footer, nav, section, div {
 	background: url(../Images/point.png) repeat scroll 0 0 transparent;
 	height: 100%;
 	width: 100%;
-	z-index: 4;
+	z-index: 100;
 	position: absolute;
 	display: none;
 }
@@ -203,7 +224,7 @@ body header {
 	margin-top: 40px;
 	display: none;
 	position: absolute;
-	z-index: 4;
+	z-index: 101;
 	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
@@ -223,7 +244,7 @@ body header {
 	color: rgb(132,132,132);
 	display: none;
 	position: absolute;
-	z-index: 4;
+	z-index: 101;
 	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
@@ -291,9 +312,6 @@ body header {
 	/*color:rgb(219, 219, 183);*/
 }
 
-	.weekday:nth-child(6) {
-		color: rgb(255, 124,124);
-	}
 
 	.weekday:nth-child(7) {
 		color: rgb(255, 124, 124);
@@ -310,6 +328,32 @@ body header {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+}
+
+.current-month-cell .cell-span-container {
+	position: relative;
+	top: 56px;
+	background: rgb(253, 253, 253);
+	height: 24px;
+	z-index: 98;
+}
+
+.today-cell .cell-span-container {
+	position: relative;
+	top: 56px;
+	/*background: rgb(83,83,83);*/
+	background: rgb(255, 234, 195);
+	height: 24px;
+	z-index: 98;
+}
+
+.other-month-cell .cell-span-container {
+	position: relative;
+	top: 56px;
+	background: rgb(223, 240, 255);
+	height: 24px;
+	z-index: 98;
 }
 
 .calendar-row {
@@ -323,12 +367,23 @@ body header {
 }
 
 .lobby-event-rectangle {
-	height: 200px;
-	width: 240px;
+	height: 220px;
+	width: 272px;
 	background: rgb(248, 248, 248);
 	border: 1px solid rgb(224,224,224);
 	color: rgb(119,119,119);
 	box-shadow: 2px 2px 10px rgb(216, 216, 216);
+	overflow: hidden;
+}
+
+.details-event-rectangle {
+	height: 220px;
+	width: 245px;
+	background: rgb(248, 248, 248);
+	border: 1px solid rgb(224,224,224);
+	color: rgb(119,119,119);
+	box-shadow: 2px 2px 10px rgb(216, 216, 216);
+	overflow: hidden;
 }
 
 .login-link {
@@ -341,7 +396,7 @@ body header {
 }
 
 #detailsPanel {
-	height: 400px;
+	height: 200px;
 }
 
 #loginLinkContainer {
@@ -360,7 +415,14 @@ body header {
 
 .today-cell {
 	background: rgb(255, 234, 195) !important;
-	border: 1px solid white !important;
+	/*background:rgb(83,83,83) !important;*/
+	/*border: 1px solid white !important;*/
+}
+
+.today-cell .event-rectangle{
+	background: white !important;
+	/*background:rgb(83,83,83) !important;*/
+	/*border: 1px solid white !important;*/
 }
 
 .current-month-cell {
@@ -376,7 +438,7 @@ body header {
 		position: absolute;
 		padding-left: 2px;
 		padding-right: 5px;
-		top: 60px;
+		top:4px;
 	}
 
 .other-month-cell {
@@ -384,7 +446,7 @@ body header {
 	border: 1px solid white;
 	/*border-bottom-right-radius: 12px;
 	border-top-left-radius: 12px;*/
-	background: rgba(223, 240, 255, 1);
+	background: rgb(223, 240, 255);
 	/*box-shadow: rgb(221, 221, 221) 0px 3px 5px;
 	border: 2px solid #ddd;
 	background: #eee;*/
@@ -497,7 +559,7 @@ body header {
 	top: 25px;
 	position: absolute;
 	/*background: rgba(249, 255, 249, 1);*/
-	z-index: 4;
+	z-index: 101;
 	width: 80%;
 	margin-left: 10%;
 	display: none;
@@ -566,12 +628,11 @@ background:rgb(115, 233, 162);
 	width: 40px;
 	height: 20px;
 	position: absolute;
-	right: 0px;
-	top: 56px;
+	right: 1px;
+	top:2px;
 	text-align: center;
-	margin-right: 2px;
 	display: none;
-	z-index: 10;
+	z-index: 99;
 }
 
 .title-label {
@@ -602,19 +663,23 @@ background:rgb(115, 233, 162);
 	background: rgb(228, 228, 228);
 }
 
+.small-minutes {
+	font-size: 10px;
+	vertical-align: top;
+}
+
 .event-rectangle-details {
-	color: gray;
+	color: rgb(232,232,232);
 	overflow: hidden;
 	position: absolute;
 	z-index: 2;
-	border: 2px solid;
-	border-bottom: 6px solid;
-	background: rgba(255,255,255,.8);
+	border: 1px solid;
+	background: rgba(88,88,88,.7);
 	height: 40px;
 }
 
 	.event-rectangle-details span {
-		padding: 10px;
+		/*padding: 10px;*/
 	}
 
 .month-name-header-container {
@@ -820,8 +885,8 @@ background:rgb(115, 233, 162);
 #todayDateDayName {
 	color: rgb(251, 255, 194);
 	font-size: 2em;
-	position:relative;
-	bottom:40px;
+	position: relative;
+	bottom: 40px;
 }
 
 #todayDateMonth {
@@ -929,25 +994,24 @@ wydarzenia-tab {
 	#calendarDayDetailsTable .table-details-head {
 		overflow: hidden;
 		text-align: left;
-		background: rgba(0,0,0,.04);
-		color: white;
+		background: rgba(178,178,178,.6);
+		color: rgb(88,88,88);
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
 			float: left;
-			width: 6.66%;
+			width: 7.14%;
 		}
 
 	#calendarDayDetailsTable .table-details-body {
-		overflow: hidden;
-		background: rgba(255,255,255,.9);
-		border: 2px solid rgb(223,223,223);
+		/*background: rgba(255,255,255,.9);*/
+		background: rgba(78,78,78,.6);
+		padding-top: 4px;
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
-			height: 100px;
 			float: left;
-			width: 6.66%;
+			width: 7.14%;
 		}
 
 .month-name-container {
@@ -963,11 +1027,10 @@ wydarzenia-tab {
 }
 
 #lobbyEventSummary {
-	width: 90%;
+	width: 99%;
 	margin: 0 auto;
 	margin-top: 40px;
 	background: rgba(0, 0, 0, 0.04);
-	padding: 10px;
 	border: 1px solid rgb(240, 240, 240);
 	overflow: hidden;
 }
@@ -994,7 +1057,7 @@ wydarzenia-tab {
 
 .details-hour-line {
 	position: absolute;
-	background: whitesmoke;
+	background: rgb(164,164,164);
 	height: 100%;
 	width: 1px;
 }
@@ -1082,7 +1145,7 @@ wydarzenia-tab {
 
 .loader-container {
 	position: absolute;
-	z-index: 101;
+	z-index: 1000;
 	width: 300px;
 	height: 200px;
 	padding: 20px;
