--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -70,7 +70,7 @@
 			12.03.2012
 		</div>
 
-		<section class="event-list" data-bind="foreach: publicEvents">
+		@*<section class="event-list" data-bind="foreach: publicEvents">
 			<div class="news-event-details" data-bind="ifnot: kind.name == 'Zajęcia', visible: kind.name != 'Zajęcia'">
 				<div class="left-event-details">
 					<div class="event-kind-text" data-bind="text: kind.name, style: { background: kind.color }">
@@ -104,7 +104,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>*@
 	</div>
 
 	<footer class="lobby-footer">
