--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Kalendarz Kariery</title>
-	<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	@*<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>*@
 
 	@Styles.Render("~/Content/css")
 	@Scripts.Render("~/bundles/jquery")
@@ -19,7 +19,9 @@
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
 	<script src="~/Scripts/JSModels/KKEventModel.js"></script>
-	<script src="~/Scripts/JSViewModels/CalendarViewModel.js" defer="defer"></script>
+	<script src="~/Scripts/JSViewModels/CalendarViewModel.js"></script>
+	<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
+	<script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
 
 </head>
 <body>
