--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -86,39 +86,47 @@
 				});
 
 				var currentWeekday = $calendar.find(".today-cell").attr("weekday");
-				var calendarViewModel = new CalendarViewModel(date.getFullYear(), date.getMonth(), date.getDate(), currentWeekday);
+
+				var calendarViewModel = new CalendarViewModel(date.getFullYear(), date.getMonth() + 1, date.getDate(), currentWeekday, '@User.Identity.Name');
 
 				var indexViewModel = @Html.Raw(Json.Encode(@Model));
+
 				calendarViewModel.eventPrivacyLevels = indexViewModel.PrivacyLevels;
 				calendarViewModel.eventKinds = indexViewModel.EventKinds;
 
-				var eventTreeBuilder = new EventTreeBuilder(indexViewModel.MyEvents, calendarViewModel.eventTree);
-				eventTreeBuilder.build();
+				if (indexViewModel.MyEventsGroupedByMonth) {
+					//console.log(indexViewModel.MyEventsGroupedByMonth);
+
+					var eventTreeBuilder = new EventTreeBuilder(indexViewModel.MyEventsGroupedByMonth, calendarViewModel.eventTree);
+					eventTreeBuilder.build();
 				
-				////////////////////////////////////////////
-				console.log(calendarViewModel.eventTree);
-				////////////////////////////////////////////		
-			
-				/////////////////////////////////////////////////////////////////////////
-				//assign calendarViewModel.myEvents and draw events to the calendar
-				/////////////////////////////////////////////////////////////////////////
-				var yearProp = calendarViewModel.eventTree[calendarViewModel.calendarPageDisplayDate.year];
-				var events, len, month, event;
+					////////////////////////////////////////////
+					//console.log(calendarViewModel.eventTree);
+					////////////////////////////////////////////		
 
-				if (yearProp) {
-					month = yearProp[calendarViewModel.calendarPageDisplayDate.month + 1]
+					/////////////////////////////////////////////////////////////////////////
+					//assign calendarViewModel.myEvents and draw events to the calendar
+					/////////////////////////////////////////////////////////////////////////
+					var yearProp = calendarViewModel.eventTree[calendarViewModel.calendarPageDisplayDate.year()];
+					var events, len, month, event;
 
-					if (month) {
-						for (var days in month) {
-							events = month[days];
-							len = events.length;
-							for (var i = 0; i < len; i++) {
-								event = events[i];
-								calendarViewModel.myEvents.push(event);
-								calendarViewModel.drawEventToCalendar(event);
+					if (yearProp) {
+						month = yearProp[calendarViewModel.calendarPageDisplayDate.month()]
+
+						if (month) {
+							for (var days in month) {
+								events = month[days];
+								len = events.length;
+								for (var i = 0; i < len; i++) {
+									event = events[i];
+									calendarViewModel.myEvents.push(event);
+									calendarViewModel.drawEventToCalendar(event);
+								}
 							}
-						}
-					}					
+						}					
+					}
+
+					//console.log(calendarViewModel.myEvents);
 				}
 
 				////////////////////////////////////////////////
@@ -452,11 +460,21 @@
 				}();
 
 				this.Initialize.InitializeClick = function () {
+					//validation of dates
+
+					//register user
 					var $txtbox = $("#registerPageContainer .register-birthdate-txtbox");
 					$txtbox.keyup(function(){			
 						$("#registerPageContainer #birthDateValidationErrorMsg").hide();
 						$txtbox.removeClass("input-validation-error");			
 					});
+
+					var $txtbox = $("#addNewEventContainer .event-startdate-txtbox");
+					$txtbox.keyup(function(){			
+						$("#addNewEventContainer #dateValidationErrorMsg").hide();
+						$txtbox.removeClass("input-validation-error");			
+					});
+
 
 					//add new event end hour and end minute select box
 					var $endDate = $("#addNewEventContainer .end-date-selectbox");
